--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif32
 board = lolin32_lite
 framework = arduino
-build_flags = -DCORE_DEBUG_LEVEL=10
+build_flags = -DCORE_DEBUG_LEVEL=10 -DTLSCLIENT_DEV=1
 monitor_speed = 115200
